--- a/htmlcss_td1/style.css
+++ b/htmlcss_td1/style.css
@@ -16,8 +16,8 @@ body {
     font-family: "Inter", sans-serif;
     background-color: rgb(39, 37, 37);
     color: #ffffff;
-    font-weight: 700;
-    font-size: 1rem;
+    font-weight: 300;
+    font-size: 2rem;
 }
 .navbar {
     display: grid;
@@ -30,7 +30,7 @@ body {
     text-decoration: none;
     cursor: pointer;
     color: #ffffff;
-    font-size: 1.5rem;
+    /* font-size: 1.5rem; */
 }
 .navbar-list {
     list-style: none;
@@ -39,15 +39,14 @@ body {
     align-items: center;
 }
 .navbar-item {
-    font-weight: 500;
+    /* font-weight: 500; */
     color: #f0eaea;
-    transition: ease .3s;
 }
 
 .main {
     width: 94%;
     margin: 0 auto;
-    margin-top: 50px;
+    /* margin-top: 50px; */
 }
 .networks {
     display: grid;
@@ -61,28 +60,31 @@ body {
     object-fit: cover;
 }
 .title {
-    font-weight: 900;
-    padding-bottom: 18px;
+    /* font-weight: 900; */
+    /* padding-bottom: 8px; */
+    font-size: 5rem;
 }
 .subtitle {
     color: blue;
-    font-weight: 500;
+    /* font-weight: 500; */
 }
 .text {
     color: #f0eaea;
-    font-weight: 400;
+    letter-spacing: 0.8px;
+    /* font-weight: 400; */
 }
 
 .footer {
-    background-color: black;
+    background-color: rgb(23, 21, 21);
     border-radius: 10px;
     width: 94%;
     margin: 0 auto;
     margin-bottom: 15px;
+    margin-top: 25px;
 }
 .footer-info {
     display: grid;
-    grid-template-columns: 35% 1fr;
+    grid-template-columns: 33% 1fr;
     gap: 20px;
     margin-bottom: 20px;
 }
@@ -94,27 +96,115 @@ body {
 .footer-title {
     padding-top: 20px;
     padding-left: 10px;
-    font-weight: 500;
+    /* font-weight: 500; */
 }
 .core-btn {
-    margin: 0 15px;
+    margin: 0 15px; 
     display: block;
-    width: 150px;
+    width: 200px;
     background-color: blue;
     color: #ffffff;
     border: none;
     border-radius: 10px;
     text-align: center;
-    padding: 10px 0;
+    font-weight: bold;
+    letter-spacing: 1px;
+    padding: 20px 15px;
 }
 
 .img-box {
-    margin-left: 15px;
+    /* margin-left: 15px; */
     display: flex;
     align-items: center;
     justify-content:space-around;
+    margin-top: 110px;
+    /* text-align: center; */
+    /* gap: 100px; */
 }
 .footer-logo {
-    margin-top: 30px;
+    /* margin-top: 30px; */
     width: 100px;
+}
+
+
+@media screen and (max-width: 900px) {
+    body {
+        font-size: 1.5rem;
+        font-weight: 200;
+    }
+    .title {
+        font-size: 3rem;
+    }
+    .img {
+        min-width: 300px;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    body {
+        font-size: 1rem;
+        font-weight: 200;
+    }
+    .title {
+        font-size: 2rem;
+    }
+    .img {
+        min-width: 250px;
+    }
+    .footer-info {
+        grid-template-columns: 1fr;
+
+    }
+    .footer-title {
+        text-align: center;
+    }
+    .box-btn {
+        justify-content: center;
+    }
+    .core-btn {
+        margin: 0 auto;
+    }
+    .footer-logo {
+        margin-top: 10px;
+        /* width: 100px; */
+    }
+    .img-box {
+        margin-top: 30px;
+    }
+    
+}
+
+@media screen and (max-width: 500px) {
+    body {
+        text-align: center;
+    }
+    .navbar {
+        grid-template-columns: 33% 1fr;
+    }
+    .navbar-logo {
+        text-align: start;
+    }
+    .navbar-list {
+        text-align: end;
+    }
+    .networks {
+        grid-template-columns: 1fr;
+    }
+    .footer-info {
+        grid-template-columns: 1fr;
+
+    }
+    .box-btn {
+        justify-content: center;
+    }
+    .core-btn {
+        margin: 0 auto;
+    }
+    .footer-logo {
+        margin-top: 10px;
+        /* width: 100px; */
+    }
+    .img-box {
+        margin-top: 20px;
+    }
 }
